# MCP

./: .env.example  README.md  pyproject.toml
docs/: architecture.md  configuration.md  mcp-server.md
examples/: http_client_demo.py
flight-assistant/: .env.example  .gitignore  README.md
flight-assistant/docs/: architecture.md  configuration.md  design-notes.md  models.md
flight-assistant/examples/: http_client_demo.py
flight-assistant/src/flight_assistant/: config.py
flight-assistant/src/flight_assistant/assistant/: agent.py  cli.py  mcp_client.py
flight-assistant/src/flight_assistant/assistant/backends/: base.py  openai_backend.py
flight-assistant/src/flight_assistant/domain/: __init__.py
flight-assistant/src/flight_assistant/domain/airports/: __init__.py  models.py
flight-assistant/src/flight_assistant/mcp_server/: registry.py  server.py
flight-assistant/tests/: test_repository.py
src/flight_assistant/: __init__.py
src/flight_assistant/assistant/: __init__.py  cli.py  mcp_client.py
src/flight_assistant/assistant/backends/: __init__.py  base.py  openai_backend.py
src/flight_assistant/data_access/: __init__.py  loader.py  models.py  repository.py
src/flight_assistant/domain/: base.py
src/flight_assistant/domain/airports/: service.py
src/flight_assistant/domain/routes/: models.py
src/flight_assistant/mcp_server/: __init__.py  server.py
src/flight_assistant/mcp_server/tools/: __init__.py  routes.py
tests/: conftest.py  test_airports.py  test_disclaimer.py  test_routes.py
(+3 files in other folders)
