[project]
name = "flight-route-assistant"
version = "0.1.0"
description = "Conversational flight route-discovery assistant with an MCP tool boundary (OpenFlights)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
flight-mcp-server = "flight_assistant.mcp_server.server:main"
flight-assistant = "flight_assistant.assistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_assistant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
